--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -224,7 +224,7 @@
           <!-- %% Dynamically injected %%-->
         </div>
         <div class="update-pictures js-edit-pictures x--mb">
-          <h3 data-lid="mb_update_pictures"></h3>
+          <h3></h3>
         </div>
         <div class="menu-section__subtitle">
            <h3 data-lid="menu_subsection_informations"></h3>
@@ -727,7 +727,7 @@
   <script src="js/lib/velocity/velocity-ui.js"></script>
   <script src="js/lib/moment/moment.min.js"></script>
   <script src="js/lib/moment/momentwithlocale.min.js"></script>
-  <script src="js/lib/nouislider/nouislider.js"></script>
+  <!-- <script src="js/lib/nouislider/nouislider.js"></script> -->
 
   <!-- custom scripts -->
   <script src="js/src/on.js"></script>
