--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -203,11 +203,10 @@
     display: flex;
     flex-flow: column nowrap;
     position: relative;
+    margin-bottom: 16px;
 }
 
 .chat-rows-title, .notification--header {
-    /* background: #f1f1f1; */
-    color: #676767;
     border-bottom: 1px solid #eee;
     padding: 8px 16px;
     width: 100%;
@@ -217,7 +216,7 @@
     font-family: 'quenda';
 }
 
-.chat-rows-title:not(:first-of-type) {margin-top: 18px;}
+.chat-rows-title {/* margin-top: 18px; */}
 
 .chat-rows-title span {
     position: relative;
