--- a/public/css/src/landing/landing_v3.css
+++ b/public/css/src/landing/landing_v3.css
@@ -1,4 +1,3 @@
-
 .landing.x--v2 {
     display: flex;
     align-items: center;
@@ -17,8 +16,20 @@
     box-sizing: border-box;
 }
 
-.landing__h1 {font-size: 66px;margin-bottom: 32px;font-family: 'pacifico';font-family: 'creamy';text-align: center;font-size: 35px;font-family: 'quenda';font-weight: bolder;text-shadow: 0 2px 20px rgba(0, 0, 0, 0.4);}
+.landing__h1 {
+    font-size: 66px;
+    margin-bottom: 32px;
+    font-family: 'pacifico';
+    font-family: 'creamy';
+    text-align: center;
+    font-size: 35px;
+    font-family: 'quenda';
+    font-weight: bolder;
+    text-shadow: 0 2px 20px rgba(0, 0, 0, 0.4);
+}
+
 .landing__h1 h1 {}
+
 .landing__h2 {
     margin-bottom: 40px;
     font-family: 'Open sans';
@@ -27,6 +38,7 @@
     text-align: center;
     text-shadow: 0 2px 20px rgba(0, 0, 0, 0.4);
 }
+
 .landing__h2 h2 {}
 
 .landing-connexion {
@@ -36,8 +48,8 @@
 }
 
 .landing-connexion.x--bald {
-  width: 70px;
-  height: 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .landing-connexion button {
@@ -46,35 +58,36 @@
     border-radius: 1000px;
     font-size: 15px;
 }
+
 .landing-connexion i {
-  display: none;
+    display: none;
 }
 
 .landing-connexion.x--white button {
-  background: white;
+    background: white;
 }
 
 .landing-connexion.x--fire button {
-  background: linear-gradient(45deg,#fe685c, #ed105d);
-  color: white;
-  width: 170px;
-  font-size: 12px;
+    background: linear-gradient(45deg, #fe685c, #ed105d);
+    color: white;
+    font-size: 13px;
 }
 
 .landing-connexion.x--bald button {
-  font-size: 36px;
-  background: linear-gradient(45deg,#fe685c, #ed105d);
-  color: white;
-  animation: pound-light .75s infinite alternate;
+    font-size: 36px;
+    background: linear-gradient(45deg, #fe685c, #ed105d);
+    color: white;
+    animation: pound-light .75s infinite alternate;
 }
 
 .landing-connexion.x--bald div {
-  display: none;
+    display: none;
 }
+
 .landing-connexion.x--bald i {
-  display: block;
-  position: relative;
-  left: 2px;
+    display: block;
+    position: relative;
+    left: 2px;
 }
 
 .landing-connexion button:hover {
@@ -167,31 +180,56 @@
 .landing-facebook-page:hover {
     opacity: .8;
 }
+
 .landing-facebook-page i {}
 
-
-
 .landing-screenshots {
-  display: flex;
-  width: 320px;
-  height: 400px;
-  position: absolute;
-  bottom: 100px;
-  right: 50px;
+    display: flex;
+    width: 320px;
+    height: 400px;
+    position: absolute;
+    bottom: 100px;
+    right: 50px;
 }
- 
-.landing__screenshot {position: absolute;bottom: 0;left: 0;width: 50%;}
 
-.landing__screenshot.x--1 {width: 60%;left: 0;z-index: 3;}
+.landing__screenshot {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+}
 
-.landing__screenshot.x--2 {left: auto;right: -4px;z-index: 2;bottom: 30px;}
+.landing__screenshot.x--1 {
+    width: 60%!important;
+    left: 0;
+    z-index: 3;
+}
 
-.landing__screenshot.x--3 {width: 54%;left: -120px;z-index: 1;bottom: 14px;}
+.landing__screenshot.x--2 {
+    left: auto;
+    right: -4px;
+    z-index: 2;
+    bottom: 30px;
+}
+
+.landing__screenshot.x--3 {
+    width: 54%;
+    left: -120px;
+    z-index: 1;
+    bottom: 14px;
+}
 
 .landing-screenshots img {
-  width: 100%;
+    width: 100%;
 }
 
+.landing-oneshot {
+    display: none;
+}
+
+.landing-oneshot img {
+    height: 100%;
+}
 
 .landing-link {
     font-weight: 700;
@@ -201,6 +239,7 @@
 .landing-bold {
     font-weight: 700;
 }
+
 .landing-footer {
     margin-top: auto;
     color: #919191;
@@ -219,9 +258,9 @@
 }
 
 .landing-footer__item {
-   margin: 0 40px 0 0;
-   cursor: pointer;
-   transition: all ease-in-out .2s;
+    margin: 0 40px 0 0;
+    cursor: pointer;
+    transition: all ease-in-out .2s;
 }
 
 .landing-footer__item:hover {
@@ -235,9 +274,7 @@
     display: block;
 }
 
-.landing-privacy {
-
-}
+.landing-privacy {}
 
 .landing-footerlay {
     /* background: linear-gradient( transparent, black); */
@@ -253,20 +290,23 @@
     width: 100%;
     height: 100%;
 }
+
 .landing-background {
     background-image: url(/img/landing/lp23.jpg);
     z-index: 1;
     background-size: cover;
     background-position: top left;
 }
+
 .landing-overlay {
-    background: linear-gradient( #1A59C5, black );
+    background: linear-gradient( #1A59C5, black);
     z-index: 2;
     opacity: 0.6;
     /* background: linear-gradient(45deg,rgba(251, 89, 92, 0),#f0215d); */
     /* background: rgba(255, 255, 255, 0.45); */
     /* background: rgba(0, 0, 0, 0.49); */
 }
+
 .landing-content {
     z-index: 3;
 }
@@ -275,213 +315,189 @@
     font-size: 11px;
     margin-top: 20px;
 }
+
 .landing-publish span {}
 
+.landing-avant {
+    position: relative;
+}
 
-.landing-avant {position: relative;}
-
-svg {position: absolute;top: 30px;left: -4px;width: 100px;}
+svg {
+    position: absolute;
+    top: 30px;
+    left: -4px;
+    width: 100px;
+}
 
 path {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 4;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-dasharray: 500;
-  stroke-dashoffset: 500;
+    fill: none;
+    stroke: #fff;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 500;
+    stroke-dashoffset: 500;
 }
 
 .start-anim path {
-  animation: dash 700ms cubic-bezier(.63,.25,.25,.9) forwards;
+    animation: dash 700ms cubic-bezier(.63, .25, .25, .9) forwards;
 }
 
 @keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
+    to {
+        stroke-dashoffset: 0;
+    }
 }
-
-
 
 @media (max-width: 1100px) {
-   
-   .landing__screenshot.x--3 {
-     display: none;
-   }
-
-   .landing-avant * {
-     display: none;
-   }
-   
-
+    .landing__screenshot.x--3 {
+        display: none;
+    }
+    .landing-avant * {
+        display: none;
+    }
 }
+
 @media (max-width: 900px) {
-   
-   .landing__screenshot.x--2 {
-     display: none;
-   }
-   
-   .landing__screenshot.x--1 {
-     left: 0;
-     right: 0;
-     bottom: 80px;
-     margin: auto;
-     width: 55%;
-     bottom: 23px;
-   }
-
-
-}
-@media (max-width: 700px) {
-   
-   .landing-background {
-      background-position: center center;
-   }
-   .landing__h2 {
-     display: none;
-   }
-
-  
-   .landing-screenshots {
-      position: absolute;
-      top: auto;
-      left: 0;
-      right: 0;
-      bottom: 140px;
-      margin: auto;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      width: 100%;
-      max-width: 300px;
-      height: 100%;
-      bottom: 0;
-   }
-
-   .landing-hero {
-     width: 100%;
-     padding: 20px;
-     height: 100%;
-     position: relative;
-   }
- 
-   .landing__h1 {
-      font-size: 24px;
-      position: absolute;
-      bottom: 74%;
-      width: 80%;
-      line-height: 30px;
-      left: 0;
-      right: 0;
-      margin: auto;
-   }
-
-  
-   .landing-connexion {
-       position: absolute;
-       z-index: 5;
-       width: 230px;
-       bottom: 72px;
-       left: 0;
-       right: 0;
-       margin: auto;
-   }
-
-   .landing-publish {
-     position: absolute;
-     bottom: 56px;
-     font-size: 10px;
-     color: white;
-     z-index: 1;
-     left: 0;
-     right: 0;
-     margin: auto;
-     text-align: center;
-   }
-
- 
-
-   .landing-connexion button {
-     font-size: 12px;
-     height: 42px;
-   }
-
-   .landing-footer {
-     padding: 0;
-     justify-content: center;
-   }
-
-
-   .landing-footer__item {
-     margin: 0 10px;
-     font-size: .8em;
-   }
-
+    .landing__screenshot.x--2 {
+        display: none;
+    }
     .landing__screenshot.x--1 {
-      bottom: 80px;
-      width: 50%;
+        left: 0;
+        right: 0;
+        bottom: 80px;
+        margin: auto;
+        width: 55%;
+        bottom: 23px;
+    }
+}
+
+@media (max-width: 700px) {
+    .landing-background {
+        background-position: center center;
+    }
+    .landing__h2 {
+        display: none;
+    }
+    .landing-screenshots {
+      display: none;
+    }
+
+    .landing-oneshot {
+        position: absolute;
+        top: auto;
+        left: 0;
+        right: 0;
+        bottom: 22%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        height: 50%;
+    }
+    
+    .landing-hero {
+        width: 100%;
+        padding: 20px;
+        height: 100%;
+        position: relative;
+    }
+    .landing__h1 {
+        font-size: 24px;
+        position: absolute;
+        bottom: 74%;
+        width: 70%;
+        line-height: 1.2em;
+        left: 0;
+        right: 0;
+        margin: auto;
+        font-size: 1.2em;
+        top: 15%!important;
+    }
+    .landing-hero .landing-connexion {
+        display: none;
+    }
+
+    .landing-oneshot .landing-connexion {
+        display: flex;
+        position: absolute;
+        z-index: 5;
+        width: 50%;
+        max-width: 100%;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        white-space: nowrap;
+    }
+    
+    .landing-publish {
+        position: absolute;
+        bottom: 56px;
+        font-size: 10px;
+        color: white;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        margin: auto;
+        text-align: center;
+    }
+
+    .landing-footer {
+        padding: 0;
+        justify-content: center;
+    }
+    .landing-footer__item {
+        margin: 0 10px;
+        font-size: .8em;
     }
 
 }
-
 
 
 /* iPhone 5/5S Portrait mode  */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-  
-  .landing__h1 {
-        font-size: 16px;
-        line-height: 20px;
-        top: 66px;
-        width: 250px;
-      }
-    .landing__screenshot.x--1 {
-      width: 124px;
+
+@media (min-width: 320px) and (max-width: 568px) {
+    
+
+    .landing-oneshot .landing-connexion {
+        height: 36px;
+        width: 150px;
+        bottom: -16px;
     }
-
-
+    .landing-oneshot .landing-connexion button {
+        font-size: 11px;
+    }
+    .landing__h1 {
+        font-size: 18px;
+    }
 }
 
 
 /* iPhone 6 Portrait mode */
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
-    
-  .landing__screenshot.x--1 {
-    width: 62%;
-  }
-
-  .landing-connexion button {
-    width: 90%!important;
-  }
-
+@media (min-width: 375px) and (max-width: 667px) {
+    .landing-oneshot .landing-connexion {
+        height: 50px;
+        width: 200px;
+        bottom: -60px;
+    }
+    .landing__h1 {
+        font-size: 24px;
+    }
+    .landing-oneshot .landing-connexion button {
+        font-size: 14px;
+    }
 }
 
 
 /* iPhone 6+ Portrait mode */
-@media (min-width: 414px) and (max-width: 736px) { 
-  
-  .landing__screenshot.x--1 {
-      width: 160px;
-      bottom: 140px;
+
+@media (min-width: 414px) and (max-width: 736px) {
+    .landing-oneshot .landing-connexion {
+        height: 50px;
+        width: 200px;
+        bottom: -60px;
     }
     .landing__h1 {
-      top: 80px;
-      line-height: 22px;
-      font-size: 22px;
-      width: 300px
+        font-size: 24px;
     }
-
-    .landing-connexion button {
-      width: 100%!important;
-    }
-
 }
