--- a/public/css/src/media.css
+++ b/public/css/src/media.css
@@ -5,11 +5,12 @@
 }
 
 @media (max-width: 500px) {
-    * {
+    div,span,input,button {
         cursor: pointer!important;
     }
     .x--mb {
         display: flex!important;
+        text-align: center;
     }
     .app-section.x--menu {
         padding-top: 45px!important;
@@ -32,18 +33,7 @@
     .user-actions {
         display: none!important;
     }
-    .be-create,
-    .notifications-panel,
-    .chat,
-    .slide,
-    .search-filters,
-    .menu-section.x--cheers .segment,
-    .empty,
-    .settings__button.x--delete,
-    .settings__button,
-    .map-browse input,
-    .profile-logout,
-    .me {
+    .be-create, .notifications-panel, .chat, .slide, .search-filters, .menu-section.x--cheers .segment, .empty, .settings__button.x--delete, .settings__button, .map-browse input {
         width: 100%!important;
     }
     .modal.x--be-create,
@@ -97,7 +87,7 @@
         display: inline-block;
         width: 130px;
         height: 130px;
-        padding: 2px!important; 
+        padding: 2px!important;
     }
     .picture-icon {
         top: 0;
@@ -352,5 +342,13 @@
     .be-inview {
         height: auto;
         min-height: 100%;
+    }
+
+    .profile-logout {
+        width: 80%;
+    } 
+
+    .cheers-back {
+        overflow: scroll;
     }
 }
