--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -342,6 +342,12 @@
     margin-bottom: 10px;
   }
   
+  .menu-section {
+    width: 100%;
+  }
+  .me-item {
+  }
+
   .menu.x--downsized h3 {
     display: none;
   }
