new map and bot scheduler for deployment

--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -437,7 +437,7 @@ span.be-dates__count {
     width: 100%;
     display: flex;
     margin-top: auto;
-    background: white;
+    background: rgba(255, 255, 255, 0.5);
     flex-shrink: 0;
 }
 
