--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -761,7 +761,7 @@
   <script src="js/src/languages/country.js"></script>
   <script src="js/src/languages/textsources.js"></script>
   <script src="js/src/facebook/facebook.js"></script> 
-  <script src="js/src/map/map.js"></script>
+  <!-- <script src="js/src/map/map.js"></script> -->
   <script src="js/src/map/mapbox.js"></script>
   <script src="js/src/map/map_styles.js"></script>
   <script src="js/src/map/map_markers_url.js"></script>
