--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -1201,6 +1201,9 @@ button:hover .icon-meedrink {
 .curtain {
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     z-index: 1234;
