--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -13,10 +13,10 @@
   <meta property="og:title" content="Des rencontres avant d'aller en soirée">
   <meta property="og:site_name" content="Meefore">
   <meta property="og:url" content="http://www.meefore.com/home">
-  <meta property="og:image" content="http://res.cloudinary.com/radioreve/image/upload/v1456943482/landing_1.jpg">
+  <meta property="og:image" content="http://res.cloudinary.com/radioreve/image/upload/v1473694005/before_rooftop.jpg">
   <meta property="fb:app_id" content="<!-- build:header-fb-id -->1509405206012202<!-- endbuild -->">
 
-  <meta property="og:description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi.">
+  <meta property="og:description" content="Repère chaque jour les before et les soirées près de chez toi.">
 
   <meta name="description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi">
  
