--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -1226,13 +1226,14 @@ button:hover .icon-meedrink {
 .modal {
     background: white;
     border-radius: 10px;
-    padding: 10px 10px 20px 10px; 
+    padding: 10px 10px 20px 10px;
     color: #191919;
     width: 400px;
     display: flex;
     flex-flow: column nowrap;
     max-height: 90%;
-    max-width: 80%;
+    max-width: 90%;
+    box-sizing: border-box;
 }
 
 .modal.x--facebook {
