--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -506,4 +506,8 @@
 
 .mapboxgl-control-container {
     opacity: .3;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 10px;
 }
