onboarding bug fix

--- a/public/css/src/onboarding/onboarding.css
+++ b/public/css/src/onboarding/onboarding.css
@@ -4,6 +4,7 @@
     height: 100%;
     padding: 50px;
     box-sizing: border-box;
+    justify-content: center;
 }
 .onb-welcome-body {
     background: white;
