--- a/public/css/src/before/before_create.css
+++ b/public/css/src/before/before_create.css
@@ -13,7 +13,12 @@
     flex-flow: column nowrap;
     opacity: 0;
     height: 100%;
+    overflow: scroll;
 } 
+
+.be-create > * {
+    flex-shrink: 0;
+}
 
 .be-create__close {
     position: absolute;
@@ -197,7 +202,6 @@
     display: flex;
     padding: 10px 8px;
     flex-flow: row wrap;
-    max-height: 70px;
     overflow: hidden;
 }
 
@@ -243,7 +247,7 @@
     border: none;
 }
 
-.be-create__image {width: 90px;height: 90px;margin: auto auto 10px;font-size: 30px;display: flex;justify-content: center;align-items: center;}
+.be-create__image {width: 90px;height: 90px;margin: auto auto 10px;font-size: 30px;display: flex;justify-content: center;align-items: center;flex-shrink: 0;}
 
 .be-create__image i {transform: rotate(15deg);}
 
