--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -7,8 +7,7 @@
   <title>Des rencontres avant d'aller en soirée </title> 
 
   <meta charset="utf-8"> 
-  <meta name="viewport"           content="width=device-width, initial-scale=1"> 
-  <meta name="viewport"           content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <meta property="og:title" content="Des rencontres avant d'aller en soirée">
   <meta property="og:site_name" content="Meefore">
