--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -38,6 +38,9 @@
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    top: 0;
+    left: 0;
+    padding: 10px;
 }
 
 
@@ -338,6 +341,7 @@
     width: 100%;
     white-space: nowrap;
     overflow-x: scroll;
+    overflow-y: hidden; 
     margin-bottom: 10px;
   }
   
