--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -575,15 +575,15 @@
 
 
   
+    <div class="js-map-wrapp">
+      <!-- Holds the Map Provider map -->
+    </div>
 
      <!-- Map start -->
-    <section class="app-section x--map" data-link="map">
+    <section class="app-section x--map js-map-wrap" data-link="map">
      <!--  <div class="app-subheader x--map">
         
       </div> -->
-      <div class="js-map-wrap">
-        <!-- Holds the Google map -->
-      </div>
 
         
     </section>
