--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -17,6 +17,8 @@
     width: 100%!important;
     padding-top: 0!important;
     padding-bottom: 84px!important;
+    padding-left: 0!important;
+    padding-right: 0 !important;
 }
 
 .chat-inview-messages .jspVerticalBar {
