--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -65,6 +65,7 @@
   <link rel="stylesheet" href="/css/src/profile/profile_user.css">
   <link rel="stylesheet" href="/css/src/pictures/pictures.css">
   <link rel="stylesheet" href="/css/src/thumbnail/thumbnail.css">
+  <link rel="stylesheet" href="/css/src/feedback/feedback.css">
   <link rel="stylesheet" href="/css/src/rosace/rosace.css">
   <link rel="stylesheet" href="/css/src/hive/hive.css">
   <link rel="stylesheet" href="/css/src/search/search.css">
@@ -574,11 +575,6 @@
      <!-- Menu section end -->
 
 
-  
-    <div class="js-map-wrapp">
-      <!-- Holds the Map Provider map -->
-    </div>
-
      <!-- Map start -->
     <section class="app-section x--map js-map-wrap" data-link="map">
      <!--  <div class="app-subheader x--map">
@@ -754,6 +750,7 @@
   <script src="js/src/chat/chat_inview.js"></script>
   <script src="js/src/chat/chat_test.js"></script>
   <script src="js/src/friends/friends.js"></script>
+  <script src="js/src/feedback/feedback.js"></script>
   <!-- <script src="js/src/invite/invite.js"></script> -->
   <script src="js/src/clock/clock.js"></script>
   <script src="js/src/languages/languages.js"></script> 
