--- a/public/css/src/landing/landing_v3.css
+++ b/public/css/src/landing/landing_v3.css
@@ -37,7 +37,7 @@
 
 .landing__h1 {
     font-size: 66px;
-    margin-bottom: 32px;
+    margin-bottom: 10px;
     font-family: 'pacifico';
     font-family: 'creamy';
     text-align: center;
@@ -90,6 +90,17 @@
     background: linear-gradient(45deg, #fe685c, #ed105d);
     color: white;
     font-size: 13px;
+}
+
+.landing-connexion.x--neutral button {
+    background: #3b5998;
+    color: white;
+    transition: background linear .15s;
+    border-radius: 6px;
+}
+.landing-connexion.x--neutral button:hover {
+    background: #516eab;
+    opacity: 1;
 }
 
 .landing-connexion.x--bald button {
@@ -296,7 +307,7 @@
 .landing-privacy {}
 
 .landing-footerlay {
-    /* background: linear-gradient( transparent, black); */
+    background: linear-gradient( transparent, rgba(0, 0, 0, 0.7));
     position: absolute;
     bottom: 0;
     left: 0;
@@ -311,19 +322,20 @@
 }
 
 .landing-background {
-    background-image: url(/img/landing/lp23.jpg);
+    background-image: url(/img/landing/lp24.jpg);
     z-index: 1;
     background-size: cover;
     background-position: top left;
 }
 
 .landing-overlay {
-    background: linear-gradient( #1A59C5, black);
+    /* background: linear-gradient( #1A59C5, black); */
     z-index: 2;
     opacity: 0.6;
     /* background: linear-gradient(45deg,rgba(251, 89, 92, 0),#f0215d); */
     /* background: rgba(255, 255, 255, 0.45); */
-    /* background: rgba(0, 0, 0, 0.49); */
+    background: rgba(0, 0, 0, 0.49);
+    background: rgba(70, 65, 47, 0.55);
 }
 
 .landing-content {
