--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -199,7 +199,7 @@
     box-sizing: border-box;
     display: none;
     overflow: hidden;
-    border: 1px solid #adc2e5;
+    border: 1px solid #1c5ac3;
 }
 
 .map-browse input {
