--- a/public/css/src/seek/seek.css
+++ b/public/css/src/seek/seek.css
@@ -101,7 +101,7 @@
     right: 86px;
     left: auto;
     border-radius: 10px 10px 0 0;
-    border: 1px solid #adc2e5;
+    border: 1px solid #2662c6;
     border-radius: 40px;
 }
 
