--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -4,7 +4,7 @@
  
 <head>
 
-  <title>Des rencontres avant d'aller en soirée </title> 
+  <title>Meefore | soirées & befores</title> 
 
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -755,6 +755,7 @@ src="https://www.facebook.com/tr?id=994486464010356&ev=PageView&noscript=1"
   <script src="js/src/pictures/pictures.js"></script>
   <script src="js/src/autologin/autologin.js"></script>
   <script src="js/src/landing/landing.js"></script>
+  <!-- <script src="js/src/landing/landing_v3.js"></script> -->
   <script src="js/src/admin/admin.js"></script>
   <script src="js/src/analytics/analytics_google.js"></script>
   <script src="js/src/cheers/cheers.js"></script>
