--- a/public/css/src/landing/landing_v3.css
+++ b/public/css/src/landing/landing_v3.css
@@ -1,7 +1,10 @@
-.landing.x--v2 {
-    display: flex;
-    align-items: center;
-    height: 100vh;
+
+
+.landing {
+    background: #808080;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .modal.x--landing-faq {
@@ -326,9 +329,10 @@
     z-index: 1;
     background-size: cover;
     background-position: center center;
+    transform: scale(1.2);
 }
 
-.landing-overlay {
+.landing-overlay.x--filter {
     /* background: linear-gradient( #1A59C5, black); */
     z-index: 2;
     opacity: 0.6;
@@ -336,6 +340,13 @@
     /* background: rgba(255, 255, 255, 0.45); */
     background: rgba(0, 0, 0, 0.49);
     background: rgba(70, 65, 47, 0.55);
+    transition: background ease-in-out .5s;
+}
+
+.landing-overlay.x--layer {
+    z-index: 5;
+    background: white;
+    display: none;
 }
 
 .landing-content {
